force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <description>Safety, quality, and environmental observations raised on EPC project sites for tracking and closure.</description>
    <label>Observation</label>
    <nameField>
        <displayFormat>OBS-{00000}</displayFormat>
        <label>Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>