force-app/main/default/objects/Observation__c/fields/Observation_Date__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date__c</fullName>
    <label>Observation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>