force-app/main/default/objects/Observation__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safety</fullName>
                <default>true</default>
                <label>Safety</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>