force-app/main/default/objects/Observation__c/fields/Observed_By__c.field-meta.xml
<CustomField>
    <fullName>Observed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations_Observed</relationshipName>
    <type>Lookup</type>
</CustomField>